HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignConst/Source/Main.uv
//! Rejected statement specimen for assignment through const permission.

public procedure assignConstReference() -> i32 {
    var value: const i32 = 1
    value = 2
    return 0
}
